# BidSenseCa

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AIRTABLE_AUTOMATION_SETUP.md  LICENSE  README.md  setup_enrichment.py  tailwind.config.js
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: scrapers.py  tenders.py
app/core/: __init__.py  database.py
app/models/: __init__.py  scraper_job.py  tender.py
app/services/: __init__.py  job_service.py  scheduler_service.py  scraper_service.py
backend/: .coverage  README.md  gap_detector.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  awards.py  enrichment.py  scrapers.py  tenders.py  users.py
backend/app/models/: tender.py
backend/app/services/: advanced_search_service.py  ai_province_service.py  ai_query_parser.py  ai_search_service.py  database.py  database_service.py  job_queue.py  sample_data.py  scheduler.py  scraper_service.py  tender_service.py
backend/app/utils/: query_parser.py  retry.py
backend/tests/: test_main.py
frontend/: ADVANCED_SEARCH_INTEGRATION.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AdvancedSearch.tsx  Navbar.tsx  SearchResults.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Scrapers.tsx  TenderDetail.tsx  Tenders.tsx  TendersList.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
infra/supabase/migrations/: 001_initial_schema.sql  002_update_tenders_schema.sql  003_add_rich_metadata.sql  003_add_rich_metadata_fixed.sql  004_add_summary_info.sql  005_advanced_search_vector.sql  006_ai_search_embeddings.sql  007_add_enrichment_fields.sql
scrapers/: BC_BID_ANALYSIS_SUMMARY.md  README.md  README_BC_BID.md  bc_bid.py  find_canadabuys_api.py  pyproject.toml  requirements.txt  scrape_specific_tender.py  update_provinces_with_ai.py
scrapers/bidsources/: __init__.py  bcbid.py  canadabuys.py
scrapers/etl/: __init__.py  loader.py
scrapers/models/: opportunity.py
scrapers/scrapers/: __init__.py  apc.py  base.py  bc_bid.py  bcbid.py  canadabuys.py  config.py  manitoba.py  ontario_portal.py  quebec.py  runner.py  saskatchewan.py
scrapers/tests/: __init__.py  test_apc.py  test_canadabuys.py  test_ontario_portal.py
src/: App.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Card.tsx  StatCard.tsx
src/pages/: Dashboard.tsx  Tenders.tsx
src/services/: api.ts
src/styles/: globals.css
src/types/: index.ts
